# muLSD

./: CMakeLists.txt  CMakeLists.txt.user.f2bdb5a  Doxyfile  MLSD-master.kdev4  README.md  cluster.cpp  cluster.hpp  compare_lines.cpp  detection.cpp  detection.hpp  image.cpp  image.h  interface.cpp  interface.hpp  lsd.c  lsd.h  main.cpp  main_detection.cpp  mlsd.cpp  mlsd.hpp  mulsd.cpp  mulsd.hpp  segment.cpp  segment.hpp  test_pyramid.cpp
.ipol/: CMakeLists.txt  Dockerfile  draw_lines.cpp  run_muLSD.sh
.kdev4/: MLSD-master.kdev4
DETECTION/: detection.cpp  detection.hpp  lsd.c  lsd.cpp  lsd.hpp  mlsd.cpp  mlsd.hpp  segment.cpp  segment.hpp
benchmark/: Makefile  P1020171_gt.txt  P1020177_gt.txt  P1020816_gt.txt  P1020817_gt.txt  P1020819_gt.txt  P1020822_gt.txt  P1020824_gt.txt  P1020825_gt.txt  P1020826_gt.txt  P1020828_gt.txt  P1020829_gt.txt  P1020830_gt.txt  P1020831_gt.txt  P1020833_gt.txt  P1020838_gt.txt  P1020839_gt.txt  P1020841_gt.txt  P1020845_gt.txt  P1020847_gt.txt  P1020848_gt.txt  P1020854_gt.txt  P1020856_gt.txt  P1020860_gt.txt  P1020861_gt.txt  P1020867_gt.txt  P1020871_gt.txt  P1020872_gt.txt  P1020887_gt.txt  P1020912_gt.txt  P1020928_gt.txt  P1030001_gt.txt  P1030004_gt.txt  P1040779_gt.txt  P1040783_gt.txt  P1040788_gt.txt  P1040795_gt.txt  P1040798_gt.txt  P1040801_gt.txt  P1040811_gt.txt  (+65 more)
cmdLine/: cmdLine.h
data/: grid_lines.txt
